--- a/Jottly_Skeleton_Site/index.html
+++ b/Jottly_Skeleton_Site/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
     <!--<![endif]-->
     <head>
-        <!-- Basic Page Needs
+        <!-- Basic Page Needs TEST
   ================================================== -->
         <meta charset="utf-8">
         <title>
